# material-gpu

./: .clang-format  .clangd  .gitignore  .gitmodules  ARCHITECTURE_OPTIMIZATION_REPORT.md  CMakeLists.txt  CUDA_ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  GPU_OPTIMIZATION_GUIDE.md  GPU_TEST_REPORT.md  MIGRATION_GUIDE.md  README.md  TESTING_REPORT.md  run_tests.sh
docs/: GPU_OPTIMIZATION_GUIDE.md
examples/: README.md  advanced_gpu_demo.cpp  basic_demo.cpp  enhanced_example.cpp  enhanced_materials.json  example.cpp  example.cu  gpu_benchmark.cpp  materials.json
include/material/: contact_models.hpp  cuda_kernels.cuh  device_api.cuh  device_material_views.cuh  device_qualifier.cuh  device_runtime.hpp  enhanced_json_loader.hpp  gpu_memory_manager.hpp  grouping.hpp  json_loader.hpp  material.hpp  material_base.hpp  material_factory.hpp  property_mixins.hpp  types.hpp  validation.hpp
scripts/: check-format.sh  format.sh
src/: enhanced_json_loader.cpp  grouping.cpp  json_loader.cpp  material.cpp  material_device.cu  material_device_stub.cpp  material_lib.cpp  validation.cpp
tests/: CMakeLists.txt  test_contact_models.cpp  test_contact_models_simple.cpp  test_cuda_kernels.cpp  test_device_views.cpp  test_factory_simple.cpp  test_json_loader.cpp  test_json_simple.cpp  test_main.cpp  test_material_builder.cpp  test_material_factory.cpp  test_material_validation.cpp  test_property_mixins.cpp
